--- a/webextensions/sidebar/styles/photon/photon.css
+++ b/webextensions/sidebar/styles/photon/photon.css
@@ -52,12 +52,12 @@ body,
     --tab-text-inverted: var(--browser-bg-more-lighter, -moz-dialog);
     --tab-text-active: var(--tab-text-regular);
     --tab-text-active-inverted: Highlight;
-    --tab-border: var(--browser-border, var(--browser-bg-more-darker, ThreeDShadow));
-    --tab-surface-hover: var(--browser-bg-hover-for-header-image, var(--browser-bg-more-lighter, ThreeDHighlight));
+    --tab-border: var(--browser-border, var(--browser-bg-more-darker, var(--in-content-box-border-color)));
+    --tab-surface-hover: var(--browser-bg-hover-for-header-image, var(--browser-bg-more-lighter, var(--in-content-button-background-hover-mixed)));
     --tab-surface-active: var(--browser-bg-active-for-header-image, var(--face-highlight-more-lighter, Highlight));
     --tab-surface-active-hover: var(--browser-bg-active-for-header-image, var(--face-highlight-more-more-lighter, Highlight));
     --tab-dropmarker: var(--browser-fg, -moz-dialogtext);
-    --tabbar-bg: var(--browser-bg-darker, ThreeDShadow);
+    --tabbar-bg: var(--browser-bg-darker, var(--in-content-box-border-color));
   }
   :root[color-scheme="system-color"] #background::after {
     background: var(--browser-bg-darker, AppWorkspace);
