--- a/webextensions/resources/ui-color.css
+++ b/webextensions/resources/ui-color.css
@@ -121,6 +121,14 @@
 
   --bg-color: var(--grey-10);
   --text-color: var(--grey-90);
+
+
+  /* simulating deprecated CSS system colors */
+  --ThreeDShadow: color-mix(in srgb, ButtonText 30%, ButtonFace);
+  --ThreeDHighlight: color-mix(in srgb, ButtonText 10%, ButtonFace)
+  --AppWorkspace: color-mix(in srgb, CanvasText 20%, Canvas);
+  --MenuText: color-mix(in srgb, ButtonText 85%, ButtonFace);
+  --Menu: ButtonFace;
 }
 
 :link {
