Implement simulated tab preview panel (#3671)
* Prepare frame contents to render tab preview tooltip #3412

* Add comments to describe the design of the module

* Implement events to track mouseenter/leave on tab substances

* Send show/hide preview message to the active tab #3412

* Send message to show tab preview with preview URL

* Show tab preview

* Remove needless parameter

* Simulate behavior of the native tab preview panel #3412

* Fix indent

* Apply appearance same to the native tab preview panel as possible as we can #3412

* Cleanup old subframes #3412

* Don't try to capture discarded tabs #3412

* Cleanup cached tab object to avoid mismatched relation

* Make more safe for invalid tab case

* Show tab preview panel with fixed width

* Use internal name same to Firefox's one

* Suppress error about sending message to special tabs

* Clear preview when active tab is switched

* Re-prepare frame to show tab preview tooltip automatically

* Hide tab preview panel when the sidebar is closed

* Cleanup needless iframe

* Hide tab preview tooltip when the tab is detached

* Destroy and reconstruct frame more safely

* Show tab preview panel with expected scale in zoomed tabs

* Apply platform specific appearance correctly

* Don't apply opacity animation while updating

* Position tab preview in better coordinates even if the sidebar header is shown.

* Fix mispositioning in zoomed contents

* Ignore delayed messages

* Suppress regular tooltip when in-content tab previw tooltip is not available

* Calculate offset more correctly

* Show tab preview panel near the sidebar

* Deactivate tab preview tooltip by default

* Show tab preview tooltip in the sidebar if the tab contents is privileged

* Calculate size and position of the tab preview tooltip more correctly

* Don't try to embed tab preview tooltip in other addon's contents

* Show tab preview tooltip as soon as possible

* Fall

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -73,7 +73,8 @@
   --over-tabs-z-index:       200; /* buttons after tabs, pinned tabs (required to make pinned tabs clickable) */
   --over-buttons-z-index:    300; /* buttons on buttons after tabs */
   --notification-ui-z-index: 9000;
-  --blocking-ui-z-index:     10000; /* frontmost of others */
+  --tooltip-ui-z-index:      10000;
+  --blocking-ui-z-index:     20000; /* frontmost of others */
 
   --tab-background-z-index:            10;
   --tab-extra-contents-behind-z-index: 20;
@@ -1280,6 +1281,23 @@ iframe#subpanel {
 .rich-confirm .bookmark-dialog input[type="text"],
 .rich-confirm .bookmark-dialog button {
   max-width: 100%;
+}
+
+
+/* tab preview tooltip */
+#tab-preview-tooltip-frame {
+  background: transparent;
+  border: 0 none;
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  pointer-events: none;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: var(--tooltip-ui-z-index);
 }
 
 
