--- a/webextensions/sidebar/styles/sound-button.css
+++ b/webextensions/sidebar/styles/sound-button.css
@@ -6,7 +6,7 @@
 */
 
 :root {
-  --sound-button-size: var(--svg-small-icon-size);
+  --sound-button-size: calc(var(--svg-small-icon-size) * 0.75);
 }
 
 tab-sound-button {
@@ -17,40 +17,49 @@ tab-sound-button {
   margin: 0;
   min-height: var(--sound-button-size);
   min-width: var(--sound-button-size); /* this is required to prevent shrinking of the box which has no position:static content */
-  opacity: 0.75;
+  opacity: 1;
   padding: 0;
   position: relative;
   width: var(--sound-button-size);
   z-index: var(--tab-ui-z-index);
 }
 
-tab-item.faviconized tab-sound-button::before,
+tab-sound-button::before {
+  background: var(--tab-text);
+  border-radius: 150%;
+  content: "";
+  display: inline-block;
+  height: calc(var(--sound-button-size) * 1.4);
+  left: calc(0px - (var(--sound-button-size) * 0.2));
+  top: calc(0px - (var(--sound-button-size) * 0.2));
+  width: calc(var(--sound-button-size) * 1.4);
+  opacity: 0.95;
+  position: absolute;
+}
+tab-sound-button:hover::before {
+  opacity: 0.5;
+}
+tab-item.faviconized tab-sound-button:hover::before {
+  opacity: 0.8;
+}
+
 tab-sound-button::after {
   -moz-context-properties: fill;
   background: none no-repeat center / 100%;
   content: "";
   display: inline-block;
-  fill: var(--tab-text);
+  fill: var(--tab-text-inverted);
   height: var(--sound-button-size);
   position: absolute;
   right: 0;
   top: 0;
   width: var(--sound-button-size);
 }
-:root.simulate-svg-context-fill tab-item.faviconized tab-sound-button::before,
 :root.simulate-svg-context-fill tab-sound-button::after {
-  background: var(--tab-text);
+  background: var(--tab-text-inverted);
   mask-position: center;
   mask-repeat: no-repeat;
   mask-size: 100%;
-}
-
-tab-item.faviconized tab-sound-button::before {
-  fill: var(--tab-text-inverted);
-  transform: scale(1.3, 1.3);
-}
-:root.simulate-svg-context-fill tab-item.faviconized tab-sound-button::before {
-  background: var(--tab-text-inverted);
 }
 
 tab-item:not(.collapsed) tab-sound-button:hover {
@@ -73,36 +82,24 @@ tab-item:not(.collapsed).has-autoplay-blocked-member.subtree-collapsed[data-chil
   display: inline-block;
 }
 
-tab-item:not(.collapsed).muted.faviconized tab-sound-button::before,
 tab-item:not(.collapsed).muted tab-sound-button::after,
-tab-item:not(.collapsed).has-muted-member.subtree-collapsed[data-child-ids].faviconized
-  tab-sound-button::before,
 tab-item:not(.collapsed).has-muted-member.subtree-collapsed[data-child-ids]
   tab-sound-button::after {
   background-image: url("./icons/audio-16-mute.svg");
 }
-:root.simulate-svg-context-fill tab-item:not(.collapsed).muted.faviconized tab-sound-button::before,
 :root.simulate-svg-context-fill tab-item:not(.collapsed).muted tab-sound-button::after,
-:root.simulate-svg-context-fill tab-item:not(.collapsed).has-muted-member.subtree-collapsed[data-child-ids].faviconized
-  tab-sound-button::before,
 :root.simulate-svg-context-fill tab-item:not(.collapsed).has-muted-member.subtree-collapsed[data-child-ids]
   tab-sound-button::after {
   background-image: none;
   mask-image: url("./icons/audio-16-mute.svg");
 }
 
-tab-item:not(.collapsed).autoplay-blocked.faviconized tab-sound-button::before,
 tab-item:not(.collapsed).autoplay-blocked tab-sound-button::after,
-tab-item:not(.collapsed).has-autoplay-blocked-member.subtree-collapsed[data-child-ids].faviconized
-  tab-sound-button::before,
 tab-item:not(.collapsed).has-autoplay-blocked-member.subtree-collapsed[data-child-ids]
   tab-sound-button::after {
   background-image: url("./icons/audio-16-blocked.svg");
 }
-:root.simulate-svg-context-fill tab-item:not(.collapsed).autoplay-blocked.faviconized tab-sound-button::before,
 :root.simulate-svg-context-fill tab-item:not(.collapsed).autoplay-blocked tab-sound-button::after,
-:root.simulate-svg-context-fill tab-item:not(.collapsed).has-autoplay-blocked-member.subtree-collapsed[data-child-ids].faviconized
-  tab-sound-button::before,
 :root.simulate-svg-context-fill tab-item:not(.collapsed).has-autoplay-blocked-member.subtree-collapsed[data-child-ids]
   tab-sound-button::after {
   background-image: none;
@@ -112,34 +109,20 @@ tab-item:not(.collapsed).has-autoplay-blocked-member.subtree-collapsed[data-chil
 /* put style definition for sound-playing tab after muted tab,
    because "sound-playing" is more important than muted for
    mixed state tree. */
-tab-item:not(.collapsed).sound-playing:not(.muted).faviconized tab-sound-button::before,
 tab-item:not(.collapsed).sound-playing:not(.muted) tab-sound-button::after,
-tab-item:not(.collapsed).has-sound-playing-member.subtree-collapsed[data-child-ids].faviconized
-  tab-sound-button::before,
 tab-item:not(.collapsed).has-sound-playing-member.subtree-collapsed[data-child-ids]
   tab-sound-button::after {
   background-image: url("./icons/audio-16.svg");
 }
-:root.simulate-svg-context-fill tab-item:not(.collapsed).sound-playing:not(.muted).faviconized tab-sound-button::before,
 :root.simulate-svg-context-fill tab-item:not(.collapsed).sound-playing:not(.muted) tab-sound-button::after,
-:root.simulate-svg-context-fill tab-item:not(.collapsed).has-sound-playing-member.subtree-collapsed[data-child-ids].faviconized
-  tab-sound-button::before,
 :root.simulate-svg-context-fill tab-item:not(.collapsed).has-sound-playing-member.subtree-collapsed[data-child-ids]
   tab-sound-button::after {
   background-image: none;
   mask-image: url("./icons/audio-16.svg");
 }
 
-tab-item.faviconized tab-sound-button:hover::before {
-  background-color: var(--tab-text-inverted);
-  background-image: none !important;
-  mask-image: none !important;
-  border-radius: 150%;
-  transform: scale(1.1, 1.1);
-}
-
 tab-item.faviconized tab-sound-button {
-  transform: scale(0.9, 0.9);
+  --sound-button-size: 10px;
   padding: 0;
   position: absolute;
   right: 0;
