--- a/webextensions/sidebar/styles/sound-button.css
+++ b/webextensions/sidebar/styles/sound-button.css
@@ -14,7 +14,7 @@ tab-sound-button {
   border: none 0 transparent;
   display: none;
   height: var(--sound-button-size);
-  margin: 0;
+  margin: 0 calc(var(--sound-button-size) * 0.2); /* prevent overrapping of this button's background circle on other buttons */
   min-height: var(--sound-button-size);
   min-width: var(--sound-button-size); /* this is required to prevent shrinking of the box which has no position:static content */
   opacity: 1;
@@ -24,6 +24,7 @@ tab-sound-button {
   z-index: var(--tab-ui-z-index);
 }
 
+/* background circle */
 tab-sound-button::before {
   background: var(--tab-text);
   border-radius: 150%;
