--- a/webextensions/sidebar/styles/twisty.css
+++ b/webextensions/sidebar/styles/twisty.css
@@ -14,12 +14,14 @@ tab-item tab-twisty {
   display: inline-block;
   font-size: var(--favicon-size);
   /*height: var(--favicon-size);*/
-  margin: var(--tab-twisty-negative-offset) 0;
+  margin-block: var(--tab-twisty-negative-offset);
+  margin-inline: 0;
   /*max-height: var(--favicon-size);*/
   max-width: var(--favicon-size);
   min-height: var(--favicon-size);
   min-width: var(--favicon-size);
-  padding: var(--tab-twisty-offset) 0;
+  padding-block: var(--tab-twisty-offset);
+  padding-inline: 0;
   position: relative;
   transform-origin: 50% 50%;
   white-space: pre;
@@ -57,7 +59,7 @@ tab-item:not(.collapsed) tab-twisty::before {
   fill: var(--tab-text);
   height: var(--svg-small-icon-size);
   line-height: 1;
-  margin-top: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2);
+  margin-block-start: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2);
   max-height: var(--favicon-size);
   max-width: var(--favicon-size);
   width: var(--svg-small-icon-size);
