--- a/webextensions/options/options.css
+++ b/webextensions/options/options.css
@@ -36,8 +36,10 @@ body.independent {
   display: flex;
   flex-direction: column;
   font: caption;
-  margin: 0;
-  padding: 1em 1em 100%;
+  margin-block: 0;
+  margin-inline: 0;
+  padding: 1em 100%;
+  padding-inline: 1em;
   -moz-user-select: none;
 }
 
@@ -47,8 +49,10 @@ em {
 }
 
 p, ul {
-  margin: 0 0 0.5em 0;
-  padding: 0;
+  margin-block: 0 0.5em;
+  margin-inline: 0;
+  padding-block: 0;
+  padding-inline: 0;
 }
 
 ul,
@@ -58,13 +62,12 @@ ul li {
 
 p.sub,
 div.sub {
-  padding-left: 2em;
+  padding-inline-start: 2em;
 }
 
 ul p.sub,
 ul div.sub p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-block: 0;
 }
 
 pre {
@@ -82,7 +85,7 @@ label[disabled="true"] button {
 
 label.has-checkbox:not(.inline),
 label.has-radio:not(.inline) {
-  margin-left: 2em;
+  margin-inline-start: 2em;
   text-indent: -2em;
   display: block;
   width: -moz-fit-content;
@@ -100,7 +103,8 @@ label.has-radio:not(.inline) {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 0;
+  padding-block: 0;
+  padding-inline: 0;
 }
 
 #style-radiogroup li {
@@ -108,8 +112,9 @@ label.has-radio:not(.inline) {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  margin-bottom: 0.5em;
-  padding: 0;
+  margin-block-end: 0.5em;
+  padding-block: 0;
+  padding-inline: 0;
   width: calc(1em + 100px + 8em); /* radio + image + label */
 }
 
@@ -133,8 +138,7 @@ label input[type="radio"] ~ img,
 label input[type="checkbox"] ~ img {
   border: 1px solid var(--ThreeDShadow);
   vertical-align: middle;
-  margin-top: 0.15em;
-  margin-bottom: 0.15em;
+  margin-block: 0.15em;
 }
 
 #syncTabsToDeviceOptions label input[type="radio"] ~ img {
@@ -147,7 +151,7 @@ label input[type="checkbox"] ~ img {
   box-shadow: 0.25em 0.25em 0.5em rgba(0, 0, 0, 0.45);
   display: inline-block;
   height: 125px /*83px*/;
-  margin-left: 0.5em;
+  margin-inline-start: 0.5em;
   opacity: 0;
   pointer-events: none;
   position: fixed;
@@ -185,7 +189,7 @@ label input[type="checkbox"] ~ img {
 
 #tooLargeUserStyleRulesCaution {
   color: var(--red-50);
-  margin-bottom: 0;
+  margin-block-end: 0;
   visibility: hidden;
 }
 #tooLargeUserStyleRulesCaution.invalid {
@@ -193,7 +197,8 @@ label input[type="checkbox"] ~ img {
 }
 
 #userStyleRulesField {
-  margin: 0 -5px;
+  margin-block: 0;
+  margin-inline: -5px;
   min-height: 10em;
   overflow: hidden;
   resize: vertical;
@@ -202,7 +207,8 @@ label input[type="checkbox"] ~ img {
 #userStyleRulesField > .CodeMirror {
   border: thin solid;
   height: calc(100% - 10px);
-  margin: 5px;
+  margin-block: 5px;
+  margin-inline: 5px;
 }
 
 #userStyleRulesField > .CodeMirror.CodeMirror-focused {
@@ -232,7 +238,7 @@ label input[type="checkbox"] ~ img {
 }
 
 #userStyleRules-footer-bar button {
-  margin-right: 0.5em;
+  margin-inline-end: 0.5em;
 }
 
 #userStyleRules-footer-bar .spacer {
@@ -280,8 +286,7 @@ tbody tr {
 
 .contextConfigs table input[type="checkbox"],
 .tabDragBehaviorConfigs table input[type="radio"] {
-  margin-left: 1.5em;
-  margin-right: 1.5em;
+  margin-inline: 1.5em;
 }
 
 
@@ -289,8 +294,7 @@ tbody tr {
   text-align: center;
 }
 #externalAddonPermissionsGroup td:nth-child(2) input[type="checkbox"] {
-  margin-left: 3em;
-  margin-right: 3em;
+  margin-inline: 3em;
 }
 
 
@@ -303,7 +307,7 @@ body > section > h1:first-child::before {
   content: "▼";
   display: inline-block;
   font-size: 65%;
-  margin-right: 0.5em;
+  margin-inline-end: 0.5em;
   position: relative;
   transition: transform 0.2s ease;
 }
@@ -321,7 +325,7 @@ body > section.collapsed > h1:first-child::before {
 
 
 body > section {
-  margin-top: 1em;
+  margin-block-start: 1em;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
@@ -330,7 +334,7 @@ body > section:not(.collapsed) {
 }
 
 body > section > h1:first-child {
-  margin-top: 0;
+  margin-block-start: 0;
   cursor: pointer;
 }
 
@@ -349,8 +353,7 @@ body > section.collapsed > h1:first-child ~ * {
 
 :target {
   box-shadow: 0 0 0.5em highlight;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  margin-block: 0.5em;
 }
 
 
@@ -368,7 +371,7 @@ body > section.collapsed > h1:first-child ~ * {
 
 #link-optionsPage-top {
   float: right;
-  padding-right: 1em;
+  padding-inline-end: 1em;
 }
 
 body.independent #link-optionsPage-top {
