--- a/webextensions/sidebar/styles/favicon.css
+++ b/webextensions/sidebar/styles/favicon.css
@@ -9,12 +9,14 @@ tab-favicon {
   display: inline-block;
   font-size: var(--favicon-size);
   height: var(--favicon-size);
-  margin: 0;
+  margin-block: 0;
+  margin-inline: 0;
   max-height: var(--favicon-size);
   max-width: var(--favicon-size);
   min-height: var(--favicon-size);
   min-width: var(--favicon-size);
-  padding: 0;
+  padding-block: 0;
+  padding-inline: 0;
   position: relative;
   white-space: pre;
   width: var(--favicon-size);
@@ -47,7 +49,7 @@ tab-item tab-favicon * {
   fill: var(--tab-text);
   height: var(--svg-small-icon-size);
   line-height: 1;
-  margin-top: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2);
+  margin-block-start: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2);
   max-height: var(--favicon-size);
   max-width: var(--favicon-size);
   width: var(--svg-small-icon-size);
