--- a/webextensions/sidebar/styles/photon/highcontrast.css
+++ b/webextensions/sidebar/styles/photon/highcontrast.css
@@ -34,9 +34,11 @@
   bottom: 0;
   content: "";
   left: 0;
-  margin: 0;
+  margin-block: 0;
+  margin-inline: 0;
   overflow: hidden;
-  padding: 0;
+  padding-block: 0;
+  padding-inline: 0;
   position: fixed;
   right: 0;
   top: 0;
@@ -94,8 +96,8 @@ tab-item tab-closebox:hover::before {
   --tab-text: Highlight;
   border-radius: 0;
   height: calc(var(--svg-small-icon-size) + 0.3em);
-  margin-left: -0.15em;
-  margin-top: -0.15em;
+  margin-block-start: -0.15em;
+  margin-inline-start: -0.15em;
   opacity: 1;
   width: calc(var(--svg-small-icon-size) + 0.3em);
 }
