--- a/webextensions/sidebar/styles/proton/proton.css
+++ b/webextensions/sidebar/styles/proton/proton.css
@@ -235,7 +235,8 @@ tab-item:not(.active):not(.bundled-active):not(.highlighted):hover,
 }
 
 tab-item-substance {
-  padding: var(--tab-vertical-padding) 0.25em;
+  padding-block: var(--tab-vertical-padding);
+  padding-inline: 0.25em;
   /* Transparent tabs are shown above solid tabs.
      We have to set z-index to show all tabs in the same layer. */
   z-index: auto;
@@ -244,20 +245,21 @@ tab-item-substance {
 .after-tabs button,
 .after-tabs [role="button"] {
   --tab-like-button-padding: 0.2em;
-  padding: calc(var(--tab-dropshadow-blur) + var(--tab-like-button-padding)) 0;
+  padding-block: calc(var(--tab-dropshadow-blur) + var(--tab-like-button-padding))
+  padding-inline: 0;
   z-index: 100;
 }
 
 :root.left tab-item:not(.pinned) tab-item-substance,
 :root.left .after-tabs button:not([data-menu-ui]),
 :root.left .after-tabs [role="button"]:not([data-menu-ui]) {
-  padding-right: 0.35em;
+  padding-inline-end: 0.35em;
 }
 
 :root.right tab-item:not(.pinned) tab-item-substance,
 :root.right .after-tabs button:not([data-menu-ui]),
 :root.right .after-tabs [role="button"]:not([data-menu-ui]) {
-  padding-left: 0.35em;
+  padding-inline-start: 0.35em;
 }
 
 
@@ -352,21 +354,23 @@ tab-item * {
 }
 
 tab-item tab-label {
-  margin-left: 0.25em;
-  padding: 0 0 0.25em 0;
+  margin-inline-start: 0.25em;
+  padding-block: 0 0.25em;
+  padding-inline: 0;
 }
 
 tab-item tab-favicon {
-  margin-bottom: 0.25em;
-  margin-top: 0.25em;
+  margin-block: 0.25em;
 }
 
 /* expand closebox to fill full height of tab */
 tab-item tab-closebox {
   background: none transparent;
   border: none 0 transparent;
-  margin: var(--tab-closebox-negative-offset) 0;
-  padding: var(--tab-closebox-offset) 0.25em;
+  margin-block: var(--tab-closebox-negative-offset);
+  margin-inline: 0;
+  padding-block: var(--tab-closebox-offset);
+  padding-inline: 0.25em;
 }
 
 tab-item tab-closebox::before {
@@ -374,8 +378,8 @@ tab-item tab-closebox::before {
   content: "";
   display: inline-block;
   height: calc(var(--svg-small-icon-size) + 0.2em);
-  margin-left: -0.1em;
-  margin-top: -0.1em;
+  margin-block-start: -0.1em;
+  margin-inline-start: -0.1em;
   width: calc(var(--svg-small-icon-size) + 0.2em);
   position: absolute;
 }
@@ -428,5 +432,5 @@ tab-item.faviconized .contextual-identity-marker {
 
 .after-tabs button.newtab-action-selector-anchor::after,
 .after-tabs button.contextual-identities-selector-anchor::after {
-    margin-top: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2 + var(--tab-dropshadow-blur) + var(--tab-like-button-padding));
+  margin-block-start: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2 + var(--tab-dropshadow-blur) + var(--tab-like-button-padding));
 }
