--- a/webextensions/sidebar/styles/sidebar/sidebar.css
+++ b/webextensions/sidebar/styles/sidebar/sidebar.css
@@ -124,7 +124,8 @@ body,
 tab-item-substance {
   border-top: 1px solid transparent;
   min-height: 2.2em;     /* height including border! */
-  padding: var(--tab-vertical-padding) 3px var(--tab-vertical-padding) 2px;
+  padding-block: var(--tab-vertical-padding) var(--tab-vertical-padding);
+  padding-inline: 2px 3px;
   z-index: 0;
 }
 
@@ -169,7 +170,7 @@ tab-closebox {
   width: 1.5em;
   min-width: 1.5em;
   height: 1.5em;
-  margin-left: 3px;
+  margin-inline-start: 3px;
   background: url("closetab.png") center center no-repeat;
   opacity: 0.27;  /* turn black into #b9b9b9 */
   border: 0 none;
@@ -199,9 +200,10 @@ tab-item tab-label .label-content {
   color: var(--tab-text);
   text-align: start;
   text-shadow: none;
-  margin-bottom: 1px;
-  margin-left: 0.25em;
-  padding: 0 0 0.25em 0;
+  margin-block-end: 1px;
+  margin-inline-start: 0.25em;
+  padding-block: 0 0.25em;
+  padding-inline: 0;
 }
 
 tab-item.active tab-label .label-content {
@@ -229,7 +231,8 @@ tab-item.active tab-twisty {
   font-size: 85%;
   font-weight: bold;
   min-width: 1em;
-  padding: 0.25em;
+  padding-block: 0.25em;
+  padding-inline: 0.25em;
   text-shadow: none;
   text-align: center;
 }
@@ -256,7 +259,8 @@ tab-item[data-drop-position="self"] tab-item-substance {
   background: var(--dropmarker-bg-color);
   border: 2px solid var(--dropmarker-border-color); /* not OSX's colour but Firefox's */
   border-radius: 0.3em;
-  padding: 0 1px 0 8px;
+  padding-block: 0;
+  padding-inline: 8px 1px;
   outline: none !important;
 }
 
