--- a/webextensions/sidebar/styles/sound-button.css
+++ b/webextensions/sidebar/styles/sound-button.css
@@ -14,11 +14,13 @@ tab-sound-button {
   border: none 0 transparent;
   display: none;
   height: var(--sound-button-size);
-  margin: 0 calc(var(--sound-button-size) * 0.2 /* prevent overrapping of this button's background circle on other buttons */ + 0.2em /* and put spaces between other UIs */);
+  margin-block: 0;
+  margin-inline: calc(var(--sound-button-size) * 0.2 /* prevent overrapping of this button's background circle on other buttons */ + 0.2em /* and put spaces between other UIs */);
   min-height: var(--sound-button-size);
   min-width: var(--sound-button-size); /* this is required to prevent shrinking of the box which has no position:static content */
   opacity: 1;
-  padding: 0;
+  padding-block: 0;
+  padding-inline: 0;
   position: relative;
   width: var(--sound-button-size);
   z-index: var(--tab-ui-z-index);
@@ -124,7 +126,8 @@ tab-item:not(.collapsed).has-sound-playing-member.subtree-collapsed[data-child-i
 
 tab-item.faviconized tab-sound-button {
   --sound-button-size: 10px;
-  padding: 0;
+  padding-block: 0;
+  padding-inline: 0;
   position: absolute;
   right: 0;
   top: calc(var(--sound-button-size) * 0.2); /* cancel negative margin of the background circle */
