--- a/webextensions/sidebar/styles/proton/proton.css
+++ b/webextensions/sidebar/styles/proton/proton.css
@@ -151,11 +151,11 @@ body,
 }
 .overflow-indicator.start {
   background-position: 0 -0.3em;
-  border-top: 0.05em solid rgba(255, 255, 255, 0.2);
+  border-block-start: 0.05em solid rgba(255, 255, 255, 0.2);
 }
 .overflow-indicator.end {
   background-position: 0 0.3em;
-  border-bottom: 0.05em solid rgba(255, 255, 255, 0.2);
+  border-block-end: 0.05em solid rgba(255, 255, 255, 0.2);
 }
 :root.left .overflow-indicator.start,
 :root.left .overflow-indicator.end {
